# Predictor

./: .gitignore  README.md
Filtre_particulaire/: README.md
Filtre_particulaire/ CPP/Example-Kalman/: Kalman.h
Filtre_particulaire/Python/: Makefile
Filtre_particulaire/Python/include/: particule.py
Filtre_particulaire/Python/script/: .mission.py.swp  display_from_cpp.py  mission.py  particulaire_python.py  particule.py  roblib.py
Focalisation/: Invariant_Ile.py  README.md  focus.py  focus_invariant.py  roblib.py  simu.py
Kalman/: roblib_modified.py  sanstitre2.py  test_kalman.py
Methode_particulaire/: README.md
Methode_particulaire/CPP/: CMakeLists.txt  Kalman.cpp  Main.cpp  README.md  Robot_States.txt  robot.cpp  robot.h
Methode_particulaire/Python/: .Makefile.swp  Makefile
Methode_particulaire/Python/data/: Robot_States.txt
Methode_particulaire/Python/include/: particule.py
Methode_particulaire/Python/script/: display_from_cpp.py  mission.py  roblib.py
Tubex/: README.md  main.cpp  retours_0.cpp
Tubex/missions_predictor/: functions_predictor.cpp  functions_predictor.h  main.cpp  mission_triangle.cpp
moos-ivp-predictor/: Architecture_MOOS.xmind  CMakeLists.txt
moos-ivp-predictor/.svn/: wc.db
moos-ivp-predictor/missions/SimulationPredictor/: SimulationPredictor.moos  boat.bhv  moulin_blanc.bhv  penfeld.info
moos-ivp-predictor/missions/SimulationPredictor_moulinBlanc/: SimulationPredictor.moos
moos-ivp-predictor/missions/SimulationPredictor_old/: moulin_blanc.info
moos-ivp-predictor/missions/cycle/: cycle_state_machine.moos
moos-ivp-predictor/missions/mission_aller_retour/: boat.bhv  penfeld.info
moos-ivp-predictor/missions/simulation_penfeld/: boat.bhv
moos-ivp-predictor/src/: CMakeLists.txt
moos-ivp-predictor/src/cycle_isobath/pState1_isobath/: CMakeLists.txt  State1_isobath.cpp  State1_isobath.h  State1_isobath_Info.cpp  State1_isobath_Info.h  main.cpp  pState1_isobath.moos
moos-ivp-predictor/src/cycle_isobath/pState2_turn_left/: CMakeLists.txt  State2_turn_left.cpp  State2_turn_left.h  State2_turn_left_Info.cpp  State2_turn_left_Info.h  main.cpp  pState2_turn_left.moos
moos-ivp-predictor/src/cycle_isobath/pState3_cross_river/: CMakeLists.txt  State3_cross_river.cpp  State3_cross_river.h  State3_cross_river_Info.cpp  State3_cross_river_Info.h  main.cpp  pState3_cross_river.moos
moos-ivp-predictor/src/cycle_isobath/pStateMachine/: CMakeLists.txt  StateMachine.cpp  StateMachine.h  StateMachine_Info.cpp  StateMachine_Info.h  main.cpp  pStateMachine.moos
moos-ivp-predictor/src/pCommand/: CMakeLists.txt  Command.cpp  Command.h  Command_Info.cpp  Command_Info.h  main.cpp  pCommand.moos
moos-ivp-predictor/src/pSimulationPredictor/: CMakeLists.txt  SimulationPredictor.cpp  SimulationPredictor.h  SimulationPredictor_Info.cpp  SimulationPredictor_Info.h  main.cpp  pSimulationPredictor.moos
moos-ivp-predictor/src/pSimulationStateMachine/: CMakeLists.txt  SimulationStateMachine.cpp  SimulationStateMachine.h  SimulationStateMachine_Info.cpp  SimulationStateMachine_Info.h  main.cpp  pSimulationStateMachine.moos
moos-ivp-predictor/src/pSuiviCap/: CMakeLists.txt  HeadingTracking.cpp  HeadingTracking.h  SuiviCap.cpp  SuiviCap.h  SuiviCap_Info.cpp  SuiviCap_Info.h  main.cpp  pSuiviCap.moos
